--- a/Dispatchers/WebAPIDispatcherClienteWeb/Views/Home/Index.cshtml
+++ b/Dispatchers/WebAPIDispatcherClienteWeb/Views/Home/Index.cshtml
@@ -5,7 +5,20 @@
    
 </script>
 
-
+<div class="row">
+    <div class="col-md-6">
+        <div class="panel panel-primary">
+            <div class="panel-heading">
+                Create class 
+            </div>
+            <div class="panel-body">
+                Test es6 class
+                <p><div id="btnCreate_es6_class" class="btn btn-default">create new</div></p>
+            </div>
+            <input id="Create_es6_class_result" type="text" class="alert-success" />
+        </div>
+    
+    </div></div>
 <div class="row">
     <div class="col-md-6">
         <div class="panel-group">
@@ -56,6 +69,6 @@
 
     @section Scripts {
 
-        <script src="@Url.Content("~/Scripts/index.js")" type="text/javascript"></script>
-        <script src="@Url.Content("~/Scripts/FwkWebCLientWrapper.js")" type="text/javascript"></script>
+        <script src="@Url.Content("~/Scripts/fwkclients/index.js")" type="text/javascript"></script>
+        <script src="@Url.Content("~/Scripts/fwkclients/FwkWebCLientWrapper.js")" type="text/javascript"></script>
     }
